fixing animation on mobiles

--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,5 @@
 @import "navigation";
+@import "mixins";
 
 html {
     box-sizing: border-box;
@@ -23,35 +24,38 @@ body {
     text-rendering: optimizeLegibility;
 
     .home-page {
-        background: url(../images/background.jpg) no-repeat center center fixed; 
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
+        background-color: black;
         text-align: center;
         vertical-align: middle;
         line-height: 100%;
         color: white;
-        height: 100%;
-        font-size: 1.6em;
+        height: calc(100% - #{$nav-height});
+        font-size: 1.3em;
+        display: flex;
+        align-items: center;
     }
 
-    .typing-effect{
+    .typing-effect {
         overflow: hidden;
         margin: 0 auto; 
         white-space: nowrap; 
         letter-spacing: .15em;
         animation: 
-            typing 2s steps(40, end),
-    }
+            typing 3.5s steps(40, end);
 
-    .typing-effect::after {
-        content: '_';
-        margin-left: .15em;
-        font-size: 1.5em;
-        color: white;
-        animation: 
-            blink .75s step-end infinite;
+        @include respond-to(mobile){
+            animation: 
+                typing 2s steps(40, end);
+        }        
+
+        &:after {
+            content: '_';
+            margin-left: .15em;
+            font-size: 1.5em;
+            color: white;
+            animation: 
+                blink .75s step-end infinite;
+        }
     }
 
     @keyframes typing {
